public/css/style.css
html{
  margin:0;
  padding: 0;
  width:100%;
}

body{
  margin: 0;
  padding: 0;
  width:100%;
  display:flex;
  flex-direction: column;
}

.full-container{
  min-height: 570px;
  width:100%;
  padding: 0;
  display:flex;
  flex-direction: column;
}

nav{
  width: 100%;
  height: 40px;
  display:flex;
  justify-content:space-between;
  margin:0;
  padding: 40px;
  align-items: center;
  background-color: black;
}

ul{
  list-style-type: none;
  display:inline-block;
}

li{
  display:inline-block;
  margin: 0 10px 0 0;
}

a {
  font-size: 1.2em;
  color:grey;
}

a:hover {
  color: honeydew;
  text-decoration:none;
}

li h4 {
  color: rebeccapurple;

}

.nav-button {
  display:inline-block;
  margin: 0 10px 0 0;
  border-radius: 4px;
  background-color: grey;
}

.footer {
  width: 100%;
  display:flex;
  flex-direction:row;
  justify-content:space-between;
  padding: 10px 20px;
  background-color: black;
  align-self: flex-end;
}

.footer-boxes{
  width: 400px;
  text-align:center;
}

nav h1{
  margin:0;
  padding: 0 0 0 80px;
  color:honeydew;
  font-family: 'Aref Ruqaa', serif;
}

span{
  color: grey;
}

span a{
  color: silver;
}

.alert{
  margin:0;
}

.dropdown-menu{
  min-width: 100px;
}

.close{
  color:honeydew;
}
/*Modals*/

.auth-form{
  text-align:center;
}

.auth-form h1{
  color:honeydew;
}

.modal{
  right:100px;
  top: 140px;
  left:100px;

}

.modal-body{
  display:flex;
  flex-direction: column;
  align-items:center;
}

.modal-body h1{
  margin: 0 0 10px 0;
  padding: 0;
}

.form-row label{
  width: 100px;
}

.form-row-wrap{
  width: 400px;
  display:flex;
  flex-direction:column;
  justify-content:center;
  align-items:center;

}

.form-button{
  margin: 10px 0 0 30px;
}
.form-row{
  width: 300px;
  text-align:center;
}

.modal-header{
  background-color:rgba(20, 9, 26, 0.70);
}

.modal-content{
  background-color:grey;
}

.hamb{
  display:none;
}

.modal-footer{
  background-color:rgba(20, 0, 26, 0.70);
  width:100%;
  margin: 10px 0;
  padding:0px;
}


/*--------------------------------------Home----------------------------------*/
.form {
  text-align:center;
}
.search-row{
  display:flex;
  justify-content:space-around;
}

input{
  border-radius: 4px;
  margin: 0 10px;
}

label{
  margin: 0 10px;
}

.form button{
  border-radius: 4px;
}
.home-content{
  width: 30%;
  background-color: rgba(20, 9, 26, 0.38);
  border-radius: 10px;
  padding: 8px;
  margin: 0 14% 0% 0 ;
  align-self:flex-end;
  display:flex;
  flex-direction:column;
  justify-content: space-around;
  height: 80%;
}
.element{
  width: 70%;
  text-align: center;
  color:honeydew;
  margin: 0 auto;
  padding: 0;
}

.home{
  height: 600px;
  background: url("../img/night-life-drink.jpg");
  background-position: 0 64%;
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
  display:flex;
  flex-direction: column;
  justify-content: center;
}

.home h2 {
  text-align:center;
  color:honeydew;
  padding: 0;
  font-size: 3.48em;
  font-weight: 100;
}

.home h3 {
  padding:0;
  margin: 0;
  font-weight: 200;
}

/*------------------------------------Profile Page----------------------------*/

.profile-container{
  display:flex;
  flex-direction:column;
  padding: 40px;
  align-items:center;
}

.profile {
  background-color:#d8bfd8;
  margin: 10px;
  padding: 10px;
  border-radius: 8px;
  width: 88%;
  display:flex;
  justify-content:space-between;
}

.profile-container h2 {
  display:block;
  font-weight: 100;
}

.profile-container h3 {
  display:block;
  width:88%;
  padding:0 0 0 20px;
  font-weight: 100;
}

.profile-container h1{
  color:black;
  width: 88%;
  padding:0 0 0 20px;
  font-weight: 200;
}

.profile h2{
  margin: 10px 0 0 10px;
  text-align: left;
  display:inline-block;
  padding: 0;
}

.box{
  width: 70%;
}
.button-box{
  width: 20%;
}
.profile h3{
  margin: 10px 0 0 10px;
  font-size: 1em;
  display:inline-block;
  padding: 0;
}

.profile-button {
  width: 40px;
  border-radius: 8px;
  display:inline-block;
  margin: 0 0 10px 0;
}


.delete{
  width: 60px;
  border-radius: 8px;
  padding: 1px;
}

.info{
  /*height: 28px;*/
  width: 60px;
  border-radius: 8px;
  padding: 1px;
}

/*-------------------------------Results-------------------------------------*/
.results-container{
  background-color:rgba(20, 9, 26, 0.70);
  width: 100%;
  display:flex;
  justify-content:center;
}

.results{
  padding: 20 0p;
  display:flex;
  flex-direction: column;
  width: 70%;
}
.results-instance{
  background-color: rgba(225, 175, 252, 0.38);
  margin: 20px;
  border-radius: 4px;
  padding: 0 20px 20px;
}
.results-row{
  margin: 0px 0 0 0;
  display:flex;
  align-items:center;
}

.results h1{
  color:black;
  margin:40px 0 20px 40px;
  padding:0;
  font-weight: 200;
}

.results-h2{
  font-weight:200;
  padding:0;
  margin:0;
  font-weight: 100;
}

.results h3{
  font-weight:100;
  font-size: 24px;
  margin: 4px 0;
  width:80%;
}

.results a{
  color: silver;
}

.results a:hover{
  color:honeydew;
}

span.indent{
  display:inline-block;
  width: 40px;
}

.results p{
  font-size: 20px;
  font-weight: 100;
  margin: 8px 0 0 8px;
}

img.results-img{
  display:inline;
 width:48px;
 margin: 10px 0 10px 40px;
 padding:0;
}

/*-------------------------------Details--------------------------------------*/
.details-container{
  width: 100%;
  display:flex;
  justify-content:center;
}

.details{
  width: 90%;
}

#map {
  height: 400px;
  width: 400px;
}

.column{
  width: 50%;
  display:flex;
  justify-content:center;
  align-items:center;
  min-height: 400px;
}

.column-top{
  display:flex;
  flex-direction:column;
  width:50%;
  padding: 20px;
}

.column-top h3{
  margin:0 0 10px 40px;
}

.details .column-top button{
  margin: 0 0 0 0px;
  border-radius: 4px;
}


.details-row-2-columns{
  display:flex;
}

.details-row{
  display:flex;
  align-items:center;
}

.details-row-first h1{
  color:black;
  padding:0 0 0 28px;
  margin:0;
}
.details-row-first{
  display:flex;
  align-items:center;
  margin: 0 0 40px 0px;
  padding: 40px;
  background-color: rgba(163, 244, 244, 0.48);
}

.details-row-first img{
    margin: 0 0 0 40px;
}
.details-row img{
  height: 48px;
  width: auto;
}
.restaurants-div{
  border-radius: 8px;
  margin: 40px 0;
  padding: 0 40px;
  background-color: rgba(163, 244, 244, 0.48);
}

.restaurant-instance{
  display:block;
  margin: 0 0 12px 0;
  padding: 20px;
  border-radius: 8px;
  height: 140px;
  -webkit-column-break-inside:avoid;
  -moz-column-break-inside:avoid;
  -o-column-break-inside:avoid;
  -ms-column-break-inside:avoid;
  column-break-inside:avoid;
  background-color: rgba(15, 137, 137, 0.48);
}
.restaurants{
  -webkit-column-count: 2; /* Chrome, Safari, Opera */
  -moz-column-count: 2; /* Firefox */
  column-count: 2;
}

/*-------------------------------LogIn/SignUp---------------------------------*/

.auth{
  display:flex;
  flex-direction:column;
  justify-content:center;
  align-items:center;
  min-height: 570px;
  background-color:rgba(20, 9, 26, 0.70);
}

.auth h1{
  width: 48%;
  padding:8px 0;
  text-align:center;
  color:black;
}

.auth form{
  width: 48%;
  height: 200px;
  color:honeydew;
  padding:0
  margin:0;
}

.auth form input{
  background-color: silver;
  margin:0;
}

.grey{
  background-color:grey;
  color:black;
}

/*----------------------------------------------------------------------------*/
h1.error{
  text-align:center;
  padding:0;
}


@media(max-width: 360px) {
  h1{
    font-size: 1.8em;
  }
}

@media(max-width: 420px) {
  img.results-img{
    display:none;
  }
}

@media(max-width: 454px) {
  img.results-img{
    margin: 0 0 0 10px;
  }
}

@media(max-width: 548px) {

  .restaurants{
  -webkit-column-count: 1;
  -moz-column-count: 1;
  column-count: 1;
  }

}

@media(max-width: 648px) {

  .hamb{
    display:block;
  }

  .nav-hide{
    display:none;
  }

}

@media(max-width: 722px) {
  h1{
    padding: 0 0 0 0px;
  }
}

@media(max-width: 776px) {
  .home h3{
    font-size: 1em;
    padding: 10px 0 10px 0;
  }

  .home-content{
    height:48%;
    margin: 0 8% 0 0;
  }

  .details-row-2-columns{
    flex-direction:column;
    align-items:center;
  }

  .map{
    height: 300px;
    width: 300px;
  }

  .column{
    width: 84%;
  }

  .column-top{
    width: 84%;
  }
}

@media(max-width: 796px) {
  .small-hide{
    display:none;
  }
}

@media(max-width: 804px) {
  .home-content{
    margin: 0 0 0 0;
    align-self:center;
    width: 284px;
  }
}

@media(max-width: 900px) {
  h3{
    font-size: 1.2em;
  }

  .home-content {
    height: 60%;
  }

  .home {
    height: 570px;
  }
}

@media(max-width:948px) {
  .restaurant-instance{
    height: 200px;
  }
}

@media(max-width: 1061px) {

  input{
    margin: 10px 0;
    display:block;
  }

  .search-row{
    display:flex;
    flex-direction:column;
    justify-content:center;
    align-items:center;
  }
}

